# itmo-ctd-se-coursework

./: build.sh  coursework.cabal  shell.nix  stack.yaml
app/: Main.hs
data/20news-bydate-test/alt.atheism/: 54163.txt  54164.txt
data/20news-bydate-test/comp.sys.ibm.pc.hardware/: 60868.txt  60936.txt  61116.txt
data/20news-bydate-test/comp.sys.mac.hardware/: 52033.txt  52196.txt
data/20news-bydate-test/comp.windows.x/: 68001.txt
data/20news-bydate-test/misc.forsale/: 76361.txt  76843.txt
data/20news-bydate-test/rec.autos/: 103694.txt  103700.txt  103725.txt
data/20news-bydate-test/rec.sport.baseball/: 104984.txt
data/20news-bydate-test/rec.sport.hockey/: 53879.txt  54000.txt  54036.txt  54042.txt  54516.txt  54769.txt
data/20news-bydate-test/sci.electronics/: 54070.txt  54071.txt  54485.txt
data/20news-bydate-test/sci.med/: 59535.txt
data/20news-bydate-train/alt.atheism/: 49960.txt  51060.txt  52499.txt  52909.txt  52910.txt
data/20news-bydate-train/comp.graphics/: 38291.txt  38489.txt  38490.txt  38568.txt  38757.txt
data/20news-bydate-train/comp.sys.ibm.pc.hardware/: 60366.txt  60498.txt
data/20news-bydate-train/comp.sys.mac.hardware/: 50467.txt  51591.txt  51592.txt  51593.txt  51594.txt  51865.txt  51892.txt  51904.txt  51916.txt  51917.txt  51941.txt
data/20news-bydate-train/comp.windows.x/: 66871.txt  66923.txt  67305.txt
data/20news-bydate-train/misc.forsale/: 76112.txt  76548.txt
data/20news-bydate-train/rec.autos/: 101596.txt
data/20news-bydate-train/rec.sport.baseball/: 104352.txt  104562.txt  104572.txt
data/20news-bydate-train/sci.crypt/: 15672.txt
data/20news-bydate-train/sci.electronics/: 53721.txt  53883.txt
data/20news-bydate-train/sci.med/: 59055.txt
data/20news-bydate-train/talk.religion.misc/: 82776.txt  83651.txt
frontend/: default.nix  index.html  index.js  package.json
frontend/js/: main.js
frontend/src/: api.js
src/: Config.hs  Constraints.hs  DocSource.hs  Model.hs  NLP.hs  OutputSink.hs  Pipeline.hs  Preprocessing.hs  Runner.hs  Types.hs
src/Web/: Api.hs  Server.hs  Types.hs
