name:                coursework
version:             0.1.0.0
synopsis:            Initial project template from stack
description:         Please see README.md
homepage:            https://github.com/flyingleafe/coursework#readme
license:             BSD3
license-file:        LICENSE
author:              Anton Belyy
                   , Dmitry Mukhutdinov
maintainer:          flyingleafe@gmail.com
copyright:           2016 Anton Belyy, Dmitry Mukhutdinov
category:            Development
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     Preprocessing
                     , Model
  build-depends:       base >= 4.7 && < 5
                     , hmatrix >= 0.18.0.0
                     , vector-sized
                     , data-default
  default-language:    Haskell2010

executable coursework-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , coursework
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/flyingleafe/coursework
